update-manager (1:0.98.3) UNRELEASED; urgency=low

  * DistUpgrade/DistUpgradeCache.py:
    - fix modalias path in NvidiaDetector
  * data/glade/UpdateManager.glade:
    - add "settings" button
  * UpdateManager/UpdateManager.py:
    - open software-properties when settings button
      is clicked (LP: #334959)
  * debian/control:
    - recommend software-properties-gtk

 -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 02 Mar 2009 11:41:32 +0100

update-manager (1:0.98.2) jaunty; urgency=low

  [ Michael Vogt ]
  * DistUpgrade/DistUpgradeController.py:
    - enable apport crash capturing during upgrades
  * DistUpgrade/DistUpgradeView.py:
    - create /var/lib/pycentral/pkgremove before the upgrade to
      help pycentral transition to the new python policy (thanks
      to doko)
  * ensure pidgin-libnotify is ugpraded (LP: #332328)
  * better wording for aborts (thanks to Gabor Kelemen and
    Jean-Baptiste Lallement), LP: #289303
  * wording fixes, thanks to Brian Murray and Gabor Kelemen 
    LP: #269583
  * i18n fix, thanks to Gabor Kelemen, LP: #331821
  * support /etc/update-manager/release-upgrades.d/ directory
    for local overrides of the upgrade process. Useful to force
    certain site-specific options (like third party repository
    handling)
  * allow "[FreeSpace]\nSkipCheck=yes" override to skip free 
    space checks (useful for testing)
  * support "[Sources"]\nAllowThirdParty=yes" override to skip
    commenting out of unknown repositories (LP: #147080)
  * debian/*.install:
    - updated for the new python layout (/u/l/p/dist-packages instead of
      /u/l/p/site-packages)
  * debian/rules:
    - use DH_PYCENTRAL=include-links instead of "nomove"
    - use "--install-layout=deb" in distutils
  * debian/control:
    - use "XS-Python-Version: all" instead of current

  [ Brian Murray ]
  * DistUpgrade/multiple files:
    - fixed typographical error
  * DistUpgrade/DistUpgradeViewText.py:
    - change "Restart required" default to N (LP: #328452)
