@@ -7,6 +7,7 @@ update-manager (1:0.98.3) UNRELEASED; urgency=low
   * UpdateManager/UpdateManager.py:
     - open software-properties when settings button
       is clicked (LP: #334959)
+    - keep track of launch times via gconf
   * debian/control:
     - recommend software-properties-gtk
 
